--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,3 +2,80 @@
     background-image: url(../assets/bg.jpg);
     
 }
+
+.btnStart{
+    background: linear-gradient(rgba(5,7,12,0.4), rgba(5,7,12,0.4));
+}
+.footer{
+    background-image: url(../assets/sec5_bg.jpg);
+}
+
+@-webkit-keyframes slide-right {
+    0% {
+      -webkit-transform: translateX(-100px);
+              transform: translateX(-100px);
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+    }
+  }
+  @keyframes slide-right {
+    0% {
+      -webkit-transform: translateX(-100px);
+              transform: translateX(-100px);
+              opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+              opacity: 1;
+    }
+}
+
+@-webkit-keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(100px);
+              transform: translateY(100px);
+    }
+    100% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+    }
+  }
+  @keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(100px);
+              transform: translateY(100px);
+              opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+              opacity: 1;
+    }
+  }
+  
+.slide-right {
+	-webkit-animation: slide-right 2s 0.5s both;
+	animation: slide-right 2s 0.5s both;
+}
+
+.slide-top {
+	-webkit-animation: slide-top 2s 0.5s both;
+	        animation: slide-top 2s 0.5s both;
+} 
+
+.visibleDerecha {
+  opacity: 1;
+  transform: translateX(0) rotate(-15deg);
+}
+
+.scrollDerecha {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: transform 0.5s ease, opacity 0.5s ease 0.1s;
+}
+
+
+  
