--- a/src/pages/Cover.css
+++ b/src/pages/Cover.css
@@ -1,5 +1,5 @@
 .cover{
-    background-image: url(../assets/bg.jpg);
+    background-image: url(../assets/bg-BoLWKIE9.webp);
 }
 .superior{
     background-image: url("../assets/superior.jpg");
