--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,6 +2,9 @@
     background-image: url(../assets/bg-BoLWKIE9.webp);
     
 }
+.btnWa{
+  background-image: url(../assets/bg_brown.jpg);
+}
 
 .btnStart{
     background: linear-gradient(rgba(5,7,12,0.4), rgba(5,7,12,0.4));
